fixed sidebar icons on mobile

--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -47,6 +47,6 @@
 
 @media only screen and (max-width: 800px) {
     .sidebar {
-        padding-top: 30rem;
+        padding-top: 26%;
     }
 }
